--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset='utf-8' />
     <title>Montata Recreation</title>
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet' />
 
@@ -20,11 +22,44 @@
             bottom: 0;
             width: 100%;
         }
+
     </style>
 </head>
 
 <body>
+    <div class="fixed-top">
+        <div class="collapse" id="navbarToggleExternalContent">
+            <div class="bg-dark p-4">
+                <h5 class="text-white h4 text-center">Recreation Proximity to Airports</h5>
+                <span class="text-muted">If you're like everyone else during the COVID-19 Pandemic, you're probably
+                    experiencing some cabin fever. Well, the cure for that is a little fresh air! An excellent place to
+                    socially distance is a location that has been socially distancing since before "social distancing"
+                    was even a part of our vocabulary. Montana offers a world of opportunity to the outdoorsy-side in
+                    all of us. Plan your adventure by clicking a recreation location, to display the nearest airport.
+                </span>
+            </div>
+        </div>
+        <nav class="navbar navbar-dark bg-dark">
+            <button class=" btn btn-outline-light btn-block text-center" type="button" data-toggle="collapse"
+                data-target="#navbarToggleExternalContent" aria-expanded="true" aria-controls="collapseOne">
+                Click Here To Get Lost...
+            </button>
+<!--btn btn-link btn-block text-center-->
+        </nav>
+    </div>
+
     <div id='map'></div>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
+    </script>
+
     <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.js'></script>
     <script src='https://npmcdn.com/@turf/turf/turf.min.js'></script>
     <script src="https://d3js.org/d3-fetch.v1.min.js"></script>
@@ -37,8 +72,8 @@
         var map = new mapboxgl.Map({
             container: 'map', // container id
             style: 'mapbox://styles/alexbuck328/ckf35kdq60d4y19mmuh3ca2rg', // stylesheet location
-            center: [-111.7989, 45.2758], // starting position
-            zoom: 5.56 // starting zoom
+            center: [-109.6858, 47.3647], // starting position
+            zoom: 6.039 // starting zoom
         });
 
         console.log(parks)
@@ -46,7 +81,7 @@
         console.log(airports)
 
         map.on('load', function () {
-          
+
             // add plane icon for location marker
             map.loadImage('https://upload.wikimedia.org/wikipedia/commons/a/a4/Map_symbol_airport_02.png',
                 function (error, image) {
