--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
             width: 100%;
         }
 
+        a {
+        color: lightgray
+        }
     </style>
 </head>
 
@@ -30,12 +33,20 @@
     <div class="fixed-top">
         <div class="collapse" id="navbarToggleExternalContent">
             <div class="bg-dark p-4">
-                <h5 class="text-white h4 text-center">Recreation Proximity to Airports</h5>
+                <h5 class="text-white h4 text-center">Every Adventure Starts With The First Step</h5>
                 <span class="text-muted">If you're like everyone else during the COVID-19 Pandemic, you're probably
                     experiencing some cabin fever. Well, the cure for that is a little fresh air! An excellent place to
                     socially distance is a location that has been socially distancing since before "social distancing"
                     was even a part of our vocabulary. Montana offers a world of opportunity to the outdoorsy-side in
                     all of us. Plan your adventure by clicking a recreation location, to display the nearest airport.
+                    <br><br>
+                    Data:<br>
+                    Recreation data: <a target="_blank"
+                        href="https://gis-mtfwp.opendata.arcgis.com/datasets/montana-fish-wildlife-parks-lands">Montana
+                        Fish, Wildlife & Parks</a><br>
+                    Airport data: <a target="_blank"
+                        href="https://mslservices.mt.gov/Geographic_Information/Data/DataList/datalist_Details.aspx?did=%7B0c57ebe2-f8e8-4d55-b159-ab3202898956%7D">Montana
+                        Geographic Names Framework</a>
                 </span>
             </div>
         </div>
@@ -44,7 +55,7 @@
                 data-target="#navbarToggleExternalContent" aria-expanded="true" aria-controls="collapseOne">
                 Click Here To Get Lost...
             </button>
-<!--btn btn-link btn-block text-center-->
+            <!--btn btn-link btn-block text-center-->
         </nav>
     </div>
 
