--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
         integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-
     <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.12.0/mapbox-gl.css' rel='stylesheet' />
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:700i|Fira+Sans" rel="stylesheet">
+
 
     <style>
         body {
@@ -23,8 +25,44 @@
             width: 100%;
         }
 
+        .btn:hover {
+            background-color: #adcbd8;
+        }
+
         a {
-            color: lightgray
+            color: #8eaebd;
+        }
+
+        a:hover {
+            color: #f7882f;
+        }
+
+        h5 {
+            Font-Family: 'Cormorant Garamond', Serif;
+            color: #8eaebd;
+            font-size: 55px;
+        }
+        span {
+            Font-Family: 'Fira Sans', Sans-Serif;
+            color: #8eaebd;
+        }
+
+        .back {
+            background-color: #6b7a8f;
+            color: #8eaebd;
+        }
+
+        .btn {
+            Font-Family: 'Cormorant Garamond', Serif;
+            font-size: 20px;
+        }
+
+        .navbar {
+            background-color: #6b7a8f;
+        }
+
+        h3 {
+            font-size: 25px;
         }
     </style>
 </head>
@@ -32,9 +70,9 @@
 <body>
     <div class="fixed-top">
         <div class="collapse" id="navbarToggleExternalContent">
-            <div class="bg-dark p-4">
-                <h5 class="text-white h4 text-center">Every Adventure Starts With The First Step</h5>
-                <span class="text-muted">If you're like everyone else during the COVID-19 Pandemic, you're probably
+            <div class="back p-4">
+                <h5 class="text  text-center">Every Adventure Starts With The First Step</h5>
+                <span class="text">If you're like everyone else during the COVID-19 Pandemic, you're probably
                     experiencing some cabin fever. Well, the cure for that is a little fresh air! An excellent place to
                     socially distance is a state that has been socially distancing since before "social distancing"
                     was even a part of our vocabulary. Montana offers a world of opportunity to the outdoorsy-side in
@@ -42,7 +80,7 @@
                     comes in handy! Plan your adventure by clicking a recreation location, to display the nearest
                     airport.
                     <br><br>
-                    Data:<br>
+                    <h3>Data:</h3>
                     Recreation data: <a target="_blank"
                         href="https://gis-mtfwp.opendata.arcgis.com/datasets/montana-fish-wildlife-parks-lands">Montana
                         Fish, Wildlife & Parks</a><br>
@@ -52,10 +90,11 @@
                 </span>
             </div>
         </div>
-        <nav class="navbar navbar-dark bg-dark">
-            <button class=" btn btn-outline-light btn-block text-center" type="button" data-toggle="collapse"
+        <nav class="navbar ">
+            <!--navbar-dark bg-dark-->
+            <button class=" btn btn-md btn-outline-light btn-block text-center" type="button" data-toggle="collapse"
                 data-target="#navbarToggleExternalContent" aria-expanded="true" aria-controls="collapseOne">
-                Click Here To Get Lost...
+                Click here to Get Lost...
             </button>
         </nav>
     </div>
